fix top bar z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ body.lightmode ::-webkit-scrollbar-thumb:hover {
 	    width: calc(100% - 120px);	    
 	    -webkit-app-region: drag;
 	    -webkit-app-select: none;
-        background: #111418;
+        z-index: 9999;
 	}
 	
 		body.lightmode #topbar{
